fases iniciales de arquitectura de archivos con docker y nginx